--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo (1.0.2-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo 1.0.2-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Tue, 12 Mar 2019 15:31:40 -0700
+
 ignition-gazebo (1.0.1-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo 1.0.1-1 release
