--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.0.0~pre1-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.0.0~pre1-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Thu, 16 May 2019 13:23:53 -0700
+
 ignition-gazebo2 (1.1.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 1.1.0-1 release
