--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.0.0~pre2-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.0.0~pre2-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Fri, 17 May 2019 15:47:44 -0700
+
 ignition-gazebo2 (2.0.0~pre1-2~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.0.0~pre1-2 release
