--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.0.0~pre2-2~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.0.0~pre2-2 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Mon, 20 May 2019 17:01:03 +0200
+
 ignition-gazebo2 (2.0.0~pre2-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.0.0~pre2-1 release
