--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.0.0-2~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.0.0-2 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Thu, 13 Jun 2019 19:09:02 +0200
+
 ignition-gazebo2 (2.0.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.0.0-1 release
