--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.1.0~pre2-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.1.0~pre2-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Mon, 17 Jun 2019 07:51:06 -0700
+
 ignition-gazebo2 (2.1.0~pre1-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.1.0~pre1-1 release
