--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.2.0~pre1-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.2.0~pre1-1 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Mon, 24 Jun 2019 13:08:05 +0200
+
 ignition-gazebo2 (2.1.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.1.0-1 release
