--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,8 +1,14 @@
+ignition-gazebo2 (2.5.0-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.5.0-1 release
+
+ -- Nate Koenig <nate@openrobotics.org>  Fri, 19 Jul 2019 15:02:41 -0700
+
 ignition-gazebo2 (2.4.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.4.0-1 release
 
- -- Nate Koenig <nate@openrobotics.org>  We, 17 Jul 2019 15:02:41 -0700
+ -- Nate Koenig <nate@openrobotics.org>  Wed, 17 Jul 2019 15:02:41 -0700
 
 ignition-gazebo2 (2.3.0-1~bionic) bionic; urgency=medium
 
