--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.7.0-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.7.0-1 release
+
+ -- Nate Koenig <nate@openrobotics.org>  Wed, 07 Aug 2019 20:43:55 -0700
+
 ignition-gazebo2 (2.6.1-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.6.1-1 release
