--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.7.1-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.7.1-1 release
+
+ -- Nate Koenig <nate@openrobotics.org>  Sun, 11 Aug 2019 07:06:40 -0700
+
 ignition-gazebo2 (2.7.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.7.0-1 release
