--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.13.0-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.13.0-1 release
+
+ -- Louise Poubel <louise@openrobotics.org>  Tue, 17 Dec 2019 17:12:20 -0800
+
 ignition-gazebo2 (2.12.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.12.0-1 release
