--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.17.0-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.17.0-1 release
+
+ -- Nate Koenig <nate@openrobotics.org>  Wed, 13 May 2020 05:06:48 -0700
+
 ignition-gazebo2 (2.16.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.16.0-1 release
