--- a/bionic/debian/changelog
+++ b/bionic/debian/changelog
@@ -1,3 +1,9 @@
+ignition-gazebo2 (2.24.0-1~bionic) bionic; urgency=medium
+
+  * ignition-gazebo2 2.24.0-1 release
+
+ -- Nate Koenig <nate@openrobotics.org>  Thu, 03 Sep 2020 07:45:45 -0700
+
 ignition-gazebo2 (2.23.0-1~bionic) bionic; urgency=medium
 
   * ignition-gazebo2 2.23.0-1 release
